# agentutils

./: .gitignore  CLAUDE.md  README.md
claude/scratch/: gitro_log.md  gitro_state.md  initial_log.md  initial_state.md
tools/gitro/: DESIGN.md  README.md  pyproject.toml
tools/gitro/src/gitro/: cli.py  help.py  policy.py
tools/gitro/tests/: test_cli.py  test_policy.py
tools/markdownpeek/: DESIGN.md  README.md  pyproject.toml
tools/markdownpeek/src/markdownpeek/: __init__.py  cli.py  help.py  parser.py
tools/markdownpeek/tests/: test_cli.py  test_commands.py  test_parser.py
tools/markdownpeek/tests/fixtures/: basic.md  code_blocks.md  frontmatter.md  links.md  nested.md  no_headings.md
